Fixed scrollbar popping up

--- a/src/components/Main/main-section.scss
+++ b/src/components/Main/main-section.scss
@@ -1,7 +1,7 @@
 .main-section {
   overflow-y: scroll;
   flex: 1;
-  max-height: calc(100vh - 100px);
+  max-height: calc(100vh - 120px);
 
   &__empty-message {
     text-align: center;
